cmake_minimum_required(VERSION 3.8)
project(Assignments)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        assignment01/assignment
        assignment01/assignment.cpp
        assignment01/assignment.h
        assignment01/assignment.o
        assignment01/main.cpp
        assignment01/main.o
        assignment01/Makefile
        assignment01/MEMBERS.txt
        assignment02/assignment
        assignment02/assignment.cpp
        assignment02/assignment.h
        assignment02/assignment.o
        assignment02/main.cpp
        assignment02/main.h
        assignment02/main.o
        assignment02/Makefile
        assignment02/MEMBERS.txt
        assignment04/cmake-build-debug/assignment04.cbp
        assignment04/cmake-build-debug/cmake_install.cmake
        assignment04/cmake-build-debug/CMakeCache.txt
        assignment04/cmake-build-debug/Makefile
        assignment04/assignment
        assignment04/assignment.cpp
        assignment04/assignment.h
        assignment04/assignment.o
        assignment04/assignment04.pdf
        assignment04/CMakeLists.txt
        assignment04/main.cpp
        assignment04/main.h
        assignment04/main.o
        assignment04/Makefile
        assignment04/MEMBERS.txt
        assignment04/sphere.cpp
        assignment04/sphere.h
        assignment04/sphere.o
        glfw/CMake/modules/FindEGL.cmake
        glfw/CMake/modules/FindGLESv1.cmake
        glfw/CMake/modules/FindGLESv2.cmake
        glfw/CMake/amd64-mingw32msvc.cmake
        glfw/CMake/i586-mingw32msvc.cmake
        glfw/CMake/i686-pc-mingw32.cmake
        glfw/CMake/i686-w64-mingw32.cmake
        glfw/CMake/x86_64-w64-mingw32.cmake
        glfw/deps/EGL/eglext.h
        glfw/deps/GL/glext.h
        glfw/deps/GL/glxext.h
        glfw/deps/GL/wglext.h
        glfw/deps/getopt.c
        glfw/deps/getopt.h
        glfw/deps/tinycthread.c
        glfw/deps/tinycthread.h
        glfw/docs/build.dox
        glfw/docs/CMakeLists.txt
        glfw/docs/compat.dox
        glfw/docs/context.dox
        glfw/docs/Doxyfile
        glfw/docs/Doxyfile.in
        glfw/docs/internal.dox
        glfw/docs/main.dox
        glfw/docs/monitor.dox
        glfw/docs/moving.dox
        glfw/docs/news.dox
        glfw/docs/quick.dox
        glfw/docs/window.dox
        glfw/include/GLFW/glfw3.h
        glfw/include/GLFW/glfw3native.h
        glfw/src/clipboard.c
        glfw/src/cmake_install.cmake
        glfw/src/CMakeLists.txt
        glfw/src/cocoa_clipboard.m
        glfw/src/cocoa_gamma.c
        glfw/src/cocoa_init.m
        glfw/src/cocoa_joystick.m
        glfw/src/cocoa_monitor.m
        glfw/src/cocoa_platform.h
        glfw/src/cocoa_time.c
        glfw/src/cocoa_window.m
        glfw/src/config.h
        glfw/src/config.h.in
        glfw/src/context.c
        glfw/src/egl_context.c
        glfw/src/egl_platform.h
        glfw/src/gamma.c
        glfw/src/glfw3.pc
        glfw/src/glfw3.pc.in
        glfw/src/glfwConfig.cmake
        glfw/src/glfwConfig.cmake.in
        glfw/src/glfwConfigVersion.cmake
        glfw/src/glfwConfigVersion.cmake.in
        glfw/src/glx_context.c
        glfw/src/glx_platform.h
        glfw/src/init.c
        glfw/src/input.c
        glfw/src/internal.h
        glfw/src/joystick.c
        glfw/src/libglfw3.a
        glfw/src/Makefile
        glfw/src/monitor.c
        glfw/src/nsgl_context.m
        glfw/src/nsgl_platform.h
        glfw/src/time.c
        glfw/src/wgl_context.c
        glfw/src/wgl_platform.h
        glfw/src/win32_clipboard.c
        glfw/src/win32_gamma.c
        glfw/src/win32_init.c
        glfw/src/win32_joystick.c
        glfw/src/win32_monitor.c
        glfw/src/win32_platform.h
        glfw/src/win32_time.c
        glfw/src/win32_window.c
        glfw/src/window.c
        glfw/src/x11_clipboard.c
        glfw/src/x11_gamma.c
        glfw/src/x11_init.c
        glfw/src/x11_joystick.c
        glfw/src/x11_monitor.c
        glfw/src/x11_platform.h
        glfw/src/x11_time.c
        glfw/src/x11_unicode.c
        glfw/src/x11_window.c
        glfw/cmake_install.cmake
        glfw/cmake_uninstall.cmake
        glfw/cmake_uninstall.cmake.in
        glfw/CMakeCache.txt
        glfw/CMakeLists.txt
        glfw/COPYING.txt
        glfw/Makefile
        glfw/README.md
        glloadgen/gl_core_32.cc
        glloadgen/gl_core_32.hh
        glloadgen/KHR_debug_emulator.cc
        glm/doc/api/a00001.html
        glm/doc/api/a00002.html
        glm/doc/api/a00002_source.html
        glm/doc/api/a00003.html
        glm/doc/api/a00003_source.html
        glm/doc/api/a00004.html
        glm/doc/api/a00004_source.html
        glm/doc/api/a00005.html
        glm/doc/api/a00005_source.html
        glm/doc/api/a00006.html
        glm/doc/api/a00006_source.html
        glm/doc/api/a00007.html
        glm/doc/api/a00007_source.html
        glm/doc/api/a00008.html
        glm/doc/api/a00008_source.html
        glm/doc/api/a00009_source.html
        glm/doc/api/a00010.html
        glm/doc/api/a00010_source.html
        glm/doc/api/a00011.html
        glm/doc/api/a00011_source.html
        glm/doc/api/a00012.html
        glm/doc/api/a00012_source.html
        glm/doc/api/a00013.html
        glm/doc/api/a00013_source.html
        glm/doc/api/a00014.html
        glm/doc/api/a00014_source.html
        glm/doc/api/a00015.html
        glm/doc/api/a00015_source.html
        glm/doc/api/a00016_source.html
        glm/doc/api/a00017.html
        glm/doc/api/a00017_source.html
        glm/doc/api/a00018_source.html
        glm/doc/api/a00019.html
        glm/doc/api/a00019_source.html
        glm/doc/api/a00020_source.html
        glm/doc/api/a00021.html
        glm/doc/api/a00021_source.html
        glm/doc/api/a00022.html
        glm/doc/api/a00022_source.html
        glm/doc/api/a00023.html
        glm/doc/api/a00023_source.html
        glm/doc/api/a00024.html
        glm/doc/api/a00024_source.html
        glm/doc/api/a00025.html
        glm/doc/api/a00025_source.html
        glm/doc/api/a00026.html
        glm/doc/api/a00026_source.html
        glm/doc/api/a00027.html
        glm/doc/api/a00027_source.html
        glm/doc/api/a00028.html
        glm/doc/api/a00028_source.html
        glm/doc/api/a00029.html
        glm/doc/api/a00029_source.html
        glm/doc/api/a00030.html
        glm/doc/api/a00030_source.html
        glm/doc/api/a00031.html
        glm/doc/api/a00031_source.html
        glm/doc/api/a00032.html
        glm/doc/api/a00032_source.html
        glm/doc/api/a00033.html
        glm/doc/api/a00033_source.html
        glm/doc/api/a00034.html
        glm/doc/api/a00034_source.html
        glm/doc/api/a00035.html
        glm/doc/api/a00035_source.html
        glm/doc/api/a00036.html
        glm/doc/api/a00036_source.html
        glm/doc/api/a00037.html
        glm/doc/api/a00037_source.html
        glm/doc/api/a00038.html
        glm/doc/api/a00038_source.html
        glm/doc/api/a00039.html
        glm/doc/api/a00039_source.html
        glm/doc/api/a00040.html
        glm/doc/api/a00040_source.html
        glm/doc/api/a00041.html
        glm/doc/api/a00041_source.html
        glm/doc/api/a00042.html
        glm/doc/api/a00042_source.html
        glm/doc/api/a00043.html
        glm/doc/api/a00043_source.html
        glm/doc/api/a00044.html
        glm/doc/api/a00044_source.html
        glm/doc/api/a00045.html
        glm/doc/api/a00045_source.html
        glm/doc/api/a00046.html
        glm/doc/api/a00046_source.html
        glm/doc/api/a00047_source.html
        glm/doc/api/a00048.html
        glm/doc/api/a00048_source.html
        glm/doc/api/a00049.html
        glm/doc/api/a00049_source.html
        glm/doc/api/a00050.html
        glm/doc/api/a00050_source.html
        glm/doc/api/a00051_source.html
        glm/doc/api/a00052.html
        glm/doc/api/a00052_source.html
        glm/doc/api/a00053.html
        glm/doc/api/a00053_source.html
        glm/doc/api/a00054.html
        glm/doc/api/a00054_source.html
        glm/doc/api/a00055.html
        glm/doc/api/a00055_source.html
        glm/doc/api/a00056.html
        glm/doc/api/a00056_source.html
        glm/doc/api/a00057.html
        glm/doc/api/a00057_source.html
        glm/doc/api/a00058.html
        glm/doc/api/a00058_source.html
        glm/doc/api/a00059.html
        glm/doc/api/a00059_source.html
        glm/doc/api/a00060.html
        glm/doc/api/a00060_source.html
        glm/doc/api/a00061.html
        glm/doc/api/a00061_source.html
        glm/doc/api/a00062.html
        glm/doc/api/a00062_source.html
        glm/doc/api/a00063.html
        glm/doc/api/a00063_source.html
        glm/doc/api/a00064_source.html
        glm/doc/api/a00065.html
        glm/doc/api/a00065_source.html
        glm/doc/api/a00066.html
        glm/doc/api/a00066_source.html
        glm/doc/api/a00067.html
        glm/doc/api/a00067_source.html
        glm/doc/api/a00068.html
        glm/doc/api/a00068_source.html
        glm/doc/api/a00069.html
        glm/doc/api/a00069_source.html
        glm/doc/api/a00070.html
        glm/doc/api/a00070_source.html
        glm/doc/api/a00071.html
        glm/doc/api/a00071_source.html
        glm/doc/api/a00072_source.html
        glm/doc/api/a00073.html
        glm/doc/api/a00073_source.html
        glm/doc/api/a00074.html
        glm/doc/api/a00074_source.html
        glm/doc/api/a00075.html
        glm/doc/api/a00075_source.html
        glm/doc/api/a00076.html
        glm/doc/api/a00076_source.html
        glm/doc/api/a00077.html
        glm/doc/api/a00077_source.html
        glm/doc/api/a00078.html
        glm/doc/api/a00078_source.html
        glm/doc/api/a00079_source.html
        glm/doc/api/a00080.html
        glm/doc/api/a00080_source.html
        glm/doc/api/a00081.html
        glm/doc/api/a00081_source.html
        glm/doc/api/a00082_source.html
        glm/doc/api/a00083.html
        glm/doc/api/a00083_source.html
        glm/doc/api/a00084.html
        glm/doc/api/a00084_source.html
        glm/doc/api/a00085_source.html
        glm/doc/api/a00086.html
        glm/doc/api/a00086_source.html
        glm/doc/api/a00087.html
        glm/doc/api/a00087_source.html
        glm/doc/api/a00088.html
        glm/doc/api/a00088_source.html
        glm/doc/api/a00089.html
        glm/doc/api/a00089_source.html
        glm/doc/api/a00090.html
        glm/doc/api/a00090_source.html
        glm/doc/api/a00091.html
        glm/doc/api/a00091_source.html
        glm/doc/api/a00092.html
        glm/doc/api/a00092_source.html
        glm/doc/api/a00093.html
        glm/doc/api/a00093_source.html
        glm/doc/api/a00094.html
        glm/doc/api/a00094_source.html
        glm/doc/api/a00095.html
        glm/doc/api/a00095_source.html
        glm/doc/api/a00096.html
        glm/doc/api/a00096_source.html
        glm/doc/api/a00097.html
        glm/doc/api/a00097_source.html
        glm/doc/api/a00098.html
        glm/doc/api/a00098_source.html
        glm/doc/api/a00099.html
        glm/doc/api/a00099_source.html
        glm/doc/api/a00100.html
        glm/doc/api/a00100_source.html
        glm/doc/api/a00101.html
        glm/doc/api/a00101_source.html
        glm/doc/api/a00102.html
        glm/doc/api/a00102_source.html
        glm/doc/api/a00103.html
        glm/doc/api/a00103_source.html
        glm/doc/api/a00104.html
        glm/doc/api/a00104_source.html
        glm/doc/api/a00105.html
        glm/doc/api/a00105_source.html
        glm/doc/api/a00106.html
        glm/doc/api/a00106_source.html
        glm/doc/api/a00107.html
        glm/doc/api/a00107_source.html
        glm/doc/api/a00108.html
        glm/doc/api/a00108_source.html
        glm/doc/api/a00109.html
        glm/doc/api/a00109_source.html
        glm/doc/api/a00110.html
        glm/doc/api/a00110_source.html
        glm/doc/api/a00111.html
        glm/doc/api/a00111_source.html
        glm/doc/api/a00112.html
        glm/doc/api/a00112_source.html
        glm/doc/api/a00113.html
        glm/doc/api/a00113_source.html
        glm/doc/api/a00114.html
        glm/doc/api/a00114_source.html
        glm/doc/api/a00115.html
        glm/doc/api/a00115_source.html
        glm/doc/api/a00116.html
        glm/doc/api/a00116_source.html
        glm/doc/api/a00117_source.html
        glm/doc/api/a00118_source.html
        glm/doc/api/a00119.html
        glm/doc/api/a00119_source.html
        glm/doc/api/a00120.html
        glm/doc/api/a00120_source.html
        glm/doc/api/a00121.html
        glm/doc/api/a00121_source.html
        glm/doc/api/a00122.html
        glm/doc/api/a00122_source.html
        glm/doc/api/a00123.html
        glm/doc/api/a00123_source.html
        glm/doc/api/a00124.html
        glm/doc/api/a00124_source.html
        glm/doc/api/a00125.html
        glm/doc/api/a00125_source.html
        glm/doc/api/a00129.html
        glm/doc/api/a00130.html
        glm/doc/api/a00131.html
        glm/doc/api/a00132.html
        glm/doc/api/a00133.html
        glm/doc/api/a00134.html
        glm/doc/api/a00135.html
        glm/doc/api/a00136.html
        glm/doc/api/a00137.html
        glm/doc/api/a00138.html
        glm/doc/api/a00139.html
        glm/doc/api/a00140.html
        glm/doc/api/a00141.html
        glm/doc/api/a00142.html
        glm/doc/api/a00143.html
        glm/doc/api/a00144.html
        glm/doc/api/a00145.html
        glm/doc/api/a00146.html
        glm/doc/api/a00147.html
        glm/doc/api/a00148.html
        glm/doc/api/a00149.html
        glm/doc/api/a00150.html
        glm/doc/api/a00151.html
        glm/doc/api/a00152.html
        glm/doc/api/a00153.html
        glm/doc/api/a00154.html
        glm/doc/api/a00155.html
        glm/doc/api/a00156.html
        glm/doc/api/a00157.html
        glm/doc/api/a00158.html
        glm/doc/api/a00159.html
        glm/doc/api/a00160.html
        glm/doc/api/a00161.html
        glm/doc/api/a00162.html
        glm/doc/api/a00163.html
        glm/doc/api/a00164.html
        glm/doc/api/a00165.html
        glm/doc/api/a00166.html
        glm/doc/api/a00167.html
        glm/doc/api/a00168.html
        glm/doc/api/a00169.html
        glm/doc/api/a00170.html
        glm/doc/api/a00171.html
        glm/doc/api/a00172.html
        glm/doc/api/a00173.html
        glm/doc/api/a00174.html
        glm/doc/api/a00175.html
        glm/doc/api/a00176.html
        glm/doc/api/a00177.html
        glm/doc/api/a00178.html
        glm/doc/api/a00179.html
        glm/doc/api/a00180.html
        glm/doc/api/a00181.html
        glm/doc/api/a00182.html
        glm/doc/api/a00183.html
        glm/doc/api/a00184.html
        glm/doc/api/a00185.html
        glm/doc/api/a00186.html
        glm/doc/api/a00187.html
        glm/doc/api/a00188.html
        glm/doc/api/a00189.html
        glm/doc/api/a00190.html
        glm/doc/api/a00191.html
        glm/doc/api/a00192.html
        glm/doc/api/a00193.html
        glm/doc/api/a00194.html
        glm/doc/api/a00195.html
        glm/doc/api/a00196.html
        glm/doc/api/a00197.html
        glm/doc/api/a00198.html
        glm/doc/api/a00199.html
        glm/doc/api/a00200.html
        glm/doc/api/a00201.html
        glm/doc/api/a00202.html
        glm/doc/api/a00203.html
        glm/doc/api/a00204.html
        glm/doc/api/a00205.html
        glm/doc/api/a00206.html
        glm/doc/api/a00207.html
        glm/doc/api/a00208.html
        glm/doc/api/a00209.html
        glm/doc/api/a00210.html
        glm/doc/api/a00211.html
        glm/doc/api/a00212.html
        glm/doc/api/a00213.html
        glm/doc/api/a00214.html
        glm/doc/api/a00215.html
        glm/doc/api/background.jpg
        glm/doc/api/bc_s.png
        glm/doc/api/bdwn.png
        glm/doc/api/closed.png
        glm/doc/api/dir_1a190e7f93f4503d85aaef18e89b9041.html
        glm/doc/api/dir_4cc70906cceed54662c805106db410fc.html
        glm/doc/api/dir_61748fa02e1156ca28a06d1638c8a86e.html
        glm/doc/api/dir_934f46a345653ef2b3014a1b37a162c1.html
        glm/doc/api/dir_a844bf6d5a07b8853f8463b41029861e.html
        glm/doc/api/dir_abb3ddac8d2c26e45fecc003279ba790.html
        glm/doc/api/dir_bf513233250988b6ff3b72f8482c1597.html
        glm/doc/api/dir_d0b7d2b076d3071c16656cd994e0cf09.html
        glm/doc/api/dir_e217bba5d90990da93f61f0ea8b942dc.html
        glm/doc/api/doxygen.css
        glm/doc/api/doxygen.png
        glm/doc/api/dynsections.js
        glm/doc/api/files.html
        glm/doc/api/ftv2blank.png
        glm/doc/api/ftv2cl.png
        glm/doc/api/ftv2doc.png
        glm/doc/api/ftv2folderclosed.png
        glm/doc/api/ftv2folderopen.png
        glm/doc/api/ftv2lastnode.png
        glm/doc/api/ftv2link.png
        glm/doc/api/ftv2mlastnode.png
        glm/doc/api/ftv2mnode.png
        glm/doc/api/ftv2mo.png
        glm/doc/api/ftv2node.png
        glm/doc/api/ftv2ns.png
        glm/doc/api/ftv2plastnode.png
        glm/doc/api/ftv2pnode.png
        glm/doc/api/ftv2splitbar.png
        glm/doc/api/ftv2vertline.png
        glm/doc/api/index.html
        glm/doc/api/jquery.js
        glm/doc/api/logo.png
        glm/doc/api/modules.html
        glm/doc/api/nav_f.png
        glm/doc/api/nav_g.png
        glm/doc/api/nav_h.png
        glm/doc/api/open.png
        glm/doc/api/pages.html
        glm/doc/api/sync_off.png
        glm/doc/api/sync_on.png
        glm/doc/api/tab_a.png
        glm/doc/api/tab_b.png
        glm/doc/api/tab_h.png
        glm/doc/api/tab_s.png
        glm/doc/api/tabs.css
        glm/doc/theme/background.jpg
        glm/doc/theme/doxygen.css
        glm/doc/theme/tabs.css
        glm/doc/glm.docx
        glm/doc/glm.pdf
        glm/doc/logo.png
        glm/doc/man.doxy
        glm/doc/pages.doxy
        glm/doc/~\$glm.docx
        glm/glm/core/_detail.hpp
        glm/glm/core/_fixes.hpp
        glm/glm/core/_swizzle.hpp
        glm/glm/core/_swizzle_func.hpp
        glm/glm/core/_vectorize.hpp
        glm/glm/core/dummy.cpp
        glm/glm/core/func_common.hpp
        glm/glm/core/func_common.inl
        glm/glm/core/func_exponential.hpp
        glm/glm/core/func_exponential.inl
        glm/glm/core/func_geometric.hpp
        glm/glm/core/func_geometric.inl
        glm/glm/core/func_integer.hpp
        glm/glm/core/func_integer.inl
        glm/glm/core/func_matrix.hpp
        glm/glm/core/func_matrix.inl
        glm/glm/core/func_noise.hpp
        glm/glm/core/func_noise.inl
        glm/glm/core/func_packing.hpp
        glm/glm/core/func_packing.inl
        glm/glm/core/func_trigonometric.hpp
        glm/glm/core/func_trigonometric.inl
        glm/glm/core/func_vector_relational.hpp
        glm/glm/core/func_vector_relational.inl
        glm/glm/core/hint.hpp
        glm/glm/core/intrinsic_common.hpp
        glm/glm/core/intrinsic_common.inl
        glm/glm/core/intrinsic_exponential.hpp
        glm/glm/core/intrinsic_exponential.inl
        glm/glm/core/intrinsic_geometric.hpp
        glm/glm/core/intrinsic_geometric.inl
        glm/glm/core/intrinsic_matrix.hpp
        glm/glm/core/intrinsic_matrix.inl
        glm/glm/core/intrinsic_trigonometric.hpp
        glm/glm/core/intrinsic_trigonometric.inl
        glm/glm/core/intrinsic_vector_relational.hpp
        glm/glm/core/intrinsic_vector_relational.inl
        glm/glm/core/setup.hpp
        glm/glm/core/type.hpp
        glm/glm/core/type_float.hpp
        glm/glm/core/type_gentype.hpp
        glm/glm/core/type_gentype.inl
        glm/glm/core/type_half.hpp
        glm/glm/core/type_half.inl
        glm/glm/core/type_int.hpp
        glm/glm/core/type_mat.hpp
        glm/glm/core/type_mat.inl
        glm/glm/core/type_mat2x2.hpp
        glm/glm/core/type_mat2x2.inl
        glm/glm/core/type_mat2x3.hpp
        glm/glm/core/type_mat2x3.inl
        glm/glm/core/type_mat2x4.hpp
        glm/glm/core/type_mat2x4.inl
        glm/glm/core/type_mat3x2.hpp
        glm/glm/core/type_mat3x2.inl
        glm/glm/core/type_mat3x3.hpp
        glm/glm/core/type_mat3x3.inl
        glm/glm/core/type_mat3x4.hpp
        glm/glm/core/type_mat3x4.inl
        glm/glm/core/type_mat4x2.hpp
        glm/glm/core/type_mat4x2.inl
        glm/glm/core/type_mat4x3.hpp
        glm/glm/core/type_mat4x3.inl
        glm/glm/core/type_mat4x4.hpp
        glm/glm/core/type_mat4x4.inl
        glm/glm/core/type_size.hpp
        glm/glm/core/type_vec.hpp
        glm/glm/core/type_vec.inl
        glm/glm/core/type_vec1.hpp
        glm/glm/core/type_vec1.inl
        glm/glm/core/type_vec2.hpp
        glm/glm/core/type_vec2.inl
        glm/glm/core/type_vec3.hpp
        glm/glm/core/type_vec3.inl
        glm/glm/core/type_vec4.hpp
        glm/glm/core/type_vec4.inl
        glm/glm/gtc/constants.hpp
        glm/glm/gtc/constants.inl
        glm/glm/gtc/epsilon.hpp
        glm/glm/gtc/epsilon.inl
        glm/glm/gtc/half_float.hpp
        glm/glm/gtc/half_float.inl
        glm/glm/gtc/matrix_access.hpp
        glm/glm/gtc/matrix_access.inl
        glm/glm/gtc/matrix_integer.hpp
        glm/glm/gtc/matrix_inverse.hpp
        glm/glm/gtc/matrix_inverse.inl
        glm/glm/gtc/matrix_transform.hpp
        glm/glm/gtc/matrix_transform.inl
        glm/glm/gtc/noise.hpp
        glm/glm/gtc/noise.inl
        glm/glm/gtc/quaternion.hpp
        glm/glm/gtc/quaternion.inl
        glm/glm/gtc/random.hpp
        glm/glm/gtc/random.inl
        glm/glm/gtc/reciprocal.hpp
        glm/glm/gtc/reciprocal.inl
        glm/glm/gtc/swizzle.hpp
        glm/glm/gtc/swizzle.inl
        glm/glm/gtc/type_precision.hpp
        glm/glm/gtc/type_precision.inl
        glm/glm/gtc/type_ptr.hpp
        glm/glm/gtc/type_ptr.inl
        glm/glm/gtc/ulp.hpp
        glm/glm/gtc/ulp.inl
        glm/glm/gtx/associated_min_max.hpp
        glm/glm/gtx/associated_min_max.inl
        glm/glm/gtx/bit.hpp
        glm/glm/gtx/bit.inl
        glm/glm/gtx/closest_point.hpp
        glm/glm/gtx/closest_point.inl
        glm/glm/gtx/color_cast.hpp
        glm/glm/gtx/color_cast.inl
        glm/glm/gtx/color_space.hpp
        glm/glm/gtx/color_space.inl
        glm/glm/gtx/color_space_YCoCg.hpp
        glm/glm/gtx/color_space_YCoCg.inl
        glm/glm/gtx/compatibility.hpp
        glm/glm/gtx/compatibility.inl
        glm/glm/gtx/component_wise.hpp
        glm/glm/gtx/component_wise.inl
        glm/glm/gtx/constants.hpp
        glm/glm/gtx/epsilon.hpp
        glm/glm/gtx/euler_angles.hpp
        glm/glm/gtx/euler_angles.inl
        glm/glm/gtx/extend.hpp
        glm/glm/gtx/extend.inl
        glm/glm/gtx/extented_min_max.hpp
        glm/glm/gtx/extented_min_max.inl
        glm/glm/gtx/fast_exponential.hpp
        glm/glm/gtx/fast_exponential.inl
        glm/glm/gtx/fast_square_root.hpp
        glm/glm/gtx/fast_square_root.inl
        glm/glm/gtx/fast_trigonometry.hpp
        glm/glm/gtx/fast_trigonometry.inl
        glm/glm/gtx/gradient_paint.hpp
        glm/glm/gtx/gradient_paint.inl
        glm/glm/gtx/handed_coordinate_space.hpp
        glm/glm/gtx/handed_coordinate_space.inl
        glm/glm/gtx/inertia.hpp
        glm/glm/gtx/inertia.inl
        glm/glm/gtx/int_10_10_10_2.hpp
        glm/glm/gtx/int_10_10_10_2.inl
        glm/glm/gtx/integer.hpp
        glm/glm/gtx/integer.inl
        glm/glm/gtx/intersect.hpp
        glm/glm/gtx/intersect.inl
        glm/glm/gtx/log_base.hpp
        glm/glm/gtx/log_base.inl
        glm/glm/gtx/matrix_cross_product.hpp
        glm/glm/gtx/matrix_cross_product.inl
        glm/glm/gtx/matrix_interpolation.hpp
        glm/glm/gtx/matrix_interpolation.inl
        glm/glm/gtx/matrix_major_storage.hpp
        glm/glm/gtx/matrix_major_storage.inl
        glm/glm/gtx/matrix_operation.hpp
        glm/glm/gtx/matrix_operation.inl
        glm/glm/gtx/matrix_query.hpp
        glm/glm/gtx/matrix_query.inl
        glm/glm/gtx/mixed_product.hpp
        glm/glm/gtx/mixed_product.inl
        glm/glm/gtx/multiple.hpp
        glm/glm/gtx/multiple.inl
        glm/glm/gtx/noise.hpp
        glm/glm/gtx/norm.hpp
        glm/glm/gtx/norm.inl
        glm/glm/gtx/normal.hpp
        glm/glm/gtx/normal.inl
        glm/glm/gtx/normalize_dot.hpp
        glm/glm/gtx/normalize_dot.inl
        glm/glm/gtx/number_precision.hpp
        glm/glm/gtx/number_precision.inl
        glm/glm/gtx/ocl_type.hpp
        glm/glm/gtx/ocl_type.inl
        glm/glm/gtx/optimum_pow.hpp
        glm/glm/gtx/optimum_pow.inl
        glm/glm/gtx/orthonormalize.hpp
        glm/glm/gtx/orthonormalize.inl
        glm/glm/gtx/perpendicular.hpp
        glm/glm/gtx/perpendicular.inl
        glm/glm/gtx/polar_coordinates.hpp
        glm/glm/gtx/polar_coordinates.inl
        glm/glm/gtx/projection.hpp
        glm/glm/gtx/projection.inl
        glm/glm/gtx/quaternion.hpp
        glm/glm/gtx/quaternion.inl
        glm/glm/gtx/random.hpp
        glm/glm/gtx/raw_data.hpp
        glm/glm/gtx/raw_data.inl
        glm/glm/gtx/reciprocal.hpp
        glm/glm/gtx/rotate_vector.hpp
        glm/glm/gtx/rotate_vector.inl
        glm/glm/gtx/simd_mat4.hpp
        glm/glm/gtx/simd_mat4.inl
        glm/glm/gtx/simd_vec4.hpp
        glm/glm/gtx/simd_vec4.inl
        glm/glm/gtx/spline.hpp
        glm/glm/gtx/spline.inl
        glm/glm/gtx/std_based_type.hpp
        glm/glm/gtx/std_based_type.inl
        glm/glm/gtx/string_cast.hpp
        glm/glm/gtx/string_cast.inl
        glm/glm/gtx/transform.hpp
        glm/glm/gtx/transform.inl
        glm/glm/gtx/transform2.hpp
        glm/glm/gtx/transform2.inl
        glm/glm/gtx/ulp.hpp
        glm/glm/gtx/unsigned_int.hpp
        glm/glm/gtx/unsigned_int.inl
        glm/glm/gtx/vec1.hpp
        glm/glm/gtx/vec1.inl
        glm/glm/gtx/vector_access.hpp
        glm/glm/gtx/vector_access.inl
        glm/glm/gtx/vector_angle.hpp
        glm/glm/gtx/vector_angle.inl
        glm/glm/gtx/vector_query.hpp
        glm/glm/gtx/vector_query.inl
        glm/glm/gtx/verbose_operator.hpp
        glm/glm/gtx/verbose_operator.inl
        glm/glm/gtx/wrap.hpp
        glm/glm/gtx/wrap.inl
        glm/glm/virtrev/xstream.hpp
        glm/glm/CMakeLists.txt
        glm/glm/ext.hpp
        glm/glm/glm.hpp
        glm/test/bug/CMakeLists.txt
        glm/test/core/CMakeLists.txt
        glm/test/core/core_func_common.cpp
        glm/test/core/core_func_exponential.cpp
        glm/test/core/core_func_geometric.cpp
        glm/test/core/core_func_integer.cpp
        glm/test/core/core_func_matrix.cpp
        glm/test/core/core_func_noise.cpp
        glm/test/core/core_func_packing.cpp
        glm/test/core/core_func_swizzle.cpp
        glm/test/core/core_func_trigonometric.cpp
        glm/test/core/core_func_vector_relational.cpp
        glm/test/core/core_setup_message.cpp
        glm/test/core/core_setup_precision.cpp
        glm/test/core/core_type_float.cpp
        glm/test/core/core_type_half.cpp
        glm/test/core/core_type_int.cpp
        glm/test/core/core_type_length.cpp
        glm/test/core/core_type_mat2x2.cpp
        glm/test/core/core_type_mat2x3.cpp
        glm/test/core/core_type_mat2x4.cpp
        glm/test/core/core_type_mat3x2.cpp
        glm/test/core/core_type_mat3x3.cpp
        glm/test/core/core_type_mat3x4.cpp
        glm/test/core/core_type_mat4x2.cpp
        glm/test/core/core_type_mat4x3.cpp
        glm/test/core/core_type_mat4x4.cpp
        glm/test/core/core_type_vec1.cpp
        glm/test/core/core_type_vec2.cpp
        glm/test/core/core_type_vec3.cpp
        glm/test/core/core_type_vec4.cpp
        glm/test/external/gli/core/dummy.cpp
        glm/test/external/gli/core/generate_mipmaps.hpp
        glm/test/external/gli/core/generate_mipmaps.inl
        glm/test/external/gli/core/image2d.hpp
        glm/test/external/gli/core/image2d.inl
        glm/test/external/gli/core/operation.hpp
        glm/test/external/gli/core/operation.inl
        glm/test/external/gli/core/operator.hpp
        glm/test/external/gli/core/operator.inl
        glm/test/external/gli/core/shared_array.hpp
        glm/test/external/gli/core/shared_array.inl
        glm/test/external/gli/core/shared_ptr.hpp
        glm/test/external/gli/core/shared_ptr.inl
        glm/test/external/gli/core/size.hpp
        glm/test/external/gli/core/size.inl
        glm/test/external/gli/core/texture2d.hpp
        glm/test/external/gli/core/texture2d.inl
        glm/test/external/gli/core/texture2d_array.hpp
        glm/test/external/gli/core/texture2d_array.inl
        glm/test/external/gli/core/texture_cube.hpp
        glm/test/external/gli/core/texture_cube.inl
        glm/test/external/gli/core/texture_cube_array.hpp
        glm/test/external/gli/core/texture_cube_array.inl
        glm/test/external/gli/gtx/compression.hpp
        glm/test/external/gli/gtx/compression.inl
        glm/test/external/gli/gtx/fetch.hpp
        glm/test/external/gli/gtx/fetch.inl
        glm/test/external/gli/gtx/gl_texture2d.hpp
        glm/test/external/gli/gtx/gl_texture2d.inl
        glm/test/external/gli/gtx/gradient.hpp
        glm/test/external/gli/gtx/gradient.inl
        glm/test/external/gli/gtx/loader.hpp
        glm/test/external/gli/gtx/loader.inl
        glm/test/external/gli/gtx/loader_dds10.hpp
        glm/test/external/gli/gtx/loader_dds10.inl
        glm/test/external/gli/gtx/loader_dds9.hpp
        glm/test/external/gli/gtx/loader_dds9.inl
        glm/test/external/gli/gtx/loader_tga.hpp
        glm/test/external/gli/gtx/loader_tga.inl
        glm/test/external/gli/gtx/wavelet.hpp
        glm/test/external/gli/gtx/wavelet.inl
        glm/test/external/gli/CMakeLists.txt
        glm/test/external/gli/gli.hpp
        glm/test/gtc/CMakeLists.txt
        glm/test/gtc/gtc_constants.cpp
        glm/test/gtc/gtc_epsilon.cpp
        glm/test/gtc/gtc_half_float.cpp
        glm/test/gtc/gtc_matrix_access.cpp
        glm/test/gtc/gtc_matrix_integer.cpp
        glm/test/gtc/gtc_matrix_inverse.cpp
        glm/test/gtc/gtc_matrix_transform.cpp
        glm/test/gtc/gtc_noise.cpp
        glm/test/gtc/gtc_quaternion.cpp
        glm/test/gtc/gtc_random.cpp
        glm/test/gtc/gtc_reciprocal.cpp
        glm/test/gtc/gtc_swizzle.cpp
        glm/test/gtc/gtc_type_precision.cpp
        glm/test/gtc/gtc_type_ptr.cpp
        glm/test/gtc/gtc_ulp.cpp
        glm/test/gtx/CMakeLists.txt
        glm/test/gtx/gtx_bit.cpp
        glm/test/gtx/gtx_gradient_paint.cpp
        glm/test/gtx/gtx_integer.cpp
        glm/test/gtx/gtx_matrix_interpolation.cpp
        glm/test/gtx/gtx_matrix_query.cpp
        glm/test/gtx/gtx_multiple.cpp
        glm/test/gtx/gtx_quaternion.cpp
        glm/test/gtx/gtx_random.cpp
        glm/test/gtx/gtx_rotate_vector.cpp
        glm/test/gtx/gtx_simd_mat4.cpp
        glm/test/gtx/gtx_simd_vec4.cpp
        glm/test/gtx/gtx_string_cast.cpp
        glm/test/gtx/gtx_vector_angle.cpp
        glm/test/gtx/gtx_vector_query.cpp
        glm/test/CMakeLists.txt
        glm/test/glm.cppcheck
        glm/util/autoexp.txt
        glm/util/autoexp.vc2010.dat
        glm/util/FindGLM.cmake
        glm/util/glm.natvis
        glm/util/usertype.dat
        glm/CMakeLists.txt
        glm/copying.txt
        glm/CTestConfig.cmake
        glm/readme.txt)

add_executable(Assignments ${SOURCE_FILES})